--- a/src/HomePage/Page2/Page2.css
+++ b/src/HomePage/Page2/Page2.css
@@ -82,4 +82,7 @@
   .page2_laptop_view {
     display: none;
   }
+  .Heading_aling{
+    text-align: center;
+  }
 }
