--- a/src/MasterClassPage/Page3/Page3.css
+++ b/src/MasterClassPage/Page3/Page3.css
@@ -17,6 +17,23 @@
 .container2_page3 {
   margin-top: 0%;
 }
+.button_slide_popuppage3{
+  font-family: "Open Sans", sans-serif !important;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background-color: #f26c4f;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 0px;
+  padding: 16px 24px;
+  display: inline-block;
+  font-size: 16px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+}
 @media only screen and (min-width: 500px) {
   .rec.rec-arrow-left {
     margin-left: 30px;
